# sharmanka

./: .gitignore  CMakeLists.txt  _resources.cpp  _shr_gui.cpp  _shr_gui.h  sharmanka.fbp  sharmanka.xrc
bitmaps/: big_logo.xcf
include/shr/: Application.hpp  ByteFlow.hpp  MADWork.hpp  MainWindow.hpp  PerfTimer.hpp  PortAudio.hpp  Prerequisites.hpp  SDLAudio.hpp  SndOut.hpp  StringUtil.hpp  Track.hpp  TrackList.hpp  TrackSearchThread.hpp
include/shr/gui/: AboutDialog.hpp  MainWindow.hpp  TrackList.hpp  TrackListCtrl.hpp  TrayIcon.hpp
src/: AboutDialog.cpp  Application.cpp  MADWork.cpp  MainWindow.cpp  PerfTimer.cpp  PortAudio.cpp  SDLAudio.cpp  StringUtil.cpp  Track.cpp  TrackList.cpp  TrackListCtrl.cpp  TrackSearchThread.cpp  TrayIcon.cpp  main.cpp
src/debug/: Dummy.cpp
